app/assets/stylesheets/style.scss
/**************************************/
/* Bootstrap IMPORT */
@import "bootstrap-sprockets";
@import "bootstrap";
/* /Bootstrap IMPORT */
/**************************************/


h1 {
  font-family: 'Cormorant Garamond', 'Garamond', 'Times New Roman', Times, serif;
  font-weight: 100;
  text-shadow: .1px .05em .1em #ffffff;
 
}

.site_title h1 {
  font-size: 3.4em;
  line-height: 1em;
  margin-top: .1em;
}

h1 a {
  text-decoration: none !important;
  color: #000 !important;
}

h1 .cap {
  /*font-size: 1.4em;
  letter-spacing: -.05em;*/
  font-size: 1em;
}

h1 .sml {
  font-size: .7em;
  position: relative;
  bottom: .08em;
}

//.amp {
//}

a.regularization {
  white-space: nowrap;
}

.home_search {

  overflow: auto;
  margin-top: 25px;
}

.home_search a {
  
  font-size: 1.2em;
}

.home_search input,.home_search button {
  background-color: #F5F5F5;
  background-color: rgba(255,255,255,.6);
}


html {
  background-image: url("../images/river2.png");
  background-repeat: no-repeat;
  background-position: top;
  background-color: #eeeeee;
  /* alternate #EFEDE8 */ }

.navbar-default {
  background-color: #2F5076;
  background-color: rgba(0, 41, 86, 0.8);
  border: none; }

.navbar-default .navbar-nav li a {
  text-decoration: none; 
  color: #fff;
  font-size: 1.1em;
  font-weight: 100;
}

.navbar-default .navbar-nav li a:hover {
  color: #fff;
  background-color: #274669;
  background-color: rgba(24, 46, 75, .3);
}

a {
  color: #36659c;
  text-decoration: underline; }

.page_content {
  background-color: #F5F5F5;
  background-color: rgba(255, 255, 255, 0.4);
  margin-top: -25px;
  padding-top: 25px;
  padding-bottom:2em; }

body {
  background-color: transparent; }

.buffer-bottom {
  margin-bottom: 14px;
}
.buffer-bottom-sm {
  margin-bottom: 7px;
}

.buffer-right {
  margin-right: 14px;
}
.buffer-right-sm {
  margin-right: 7px;
}

/* Map Styles */

#map_container {
  height: 400px;
}
  

/* Tables */

.tei_table {
  width: auto;
  margin: 1em auto;
  font-size: .9em;
}
.tei_table td {
  padding: 0 .2em;
}

.tei_table td .cell_contents {
  /* line-height: 1.2em; */
}


/* General Styles */



.italic {
  font-style: italic;
}

.regularization {
  border-bottom: solid 4px #e6e6e6;
  box-shadow: inset 0 -4px 0 #e6e6e6;
  text-decoration: none;
  margin: 0 0 -3em 0;
  padding: 0;
  color: #000;
}

.underline {
  border-bottom: solid #000 1px;
}

.double.underline {
  border-bottom: 3px double black;
}

.tei_table_head {
  text-align: center;
}

.ab .date {
  padding-bottom: .5em;
  text-align: right;
  display: block;
}

.entry {
  border-bottom: solid #aaa 3px;
  margin-bottom: 1em;
  padding-bottom: .5em;
}

.entry p, .tei_div p {
  text-indent: 2em;
}

.tooltip {
  text-indent: 0;
}

.right {
  padding-bottom: .5em;
  text-align: right;
}

span.ab {
}

/* List groups on Journals page, will need more tweaking */
a.list-group-item {
  color: #fff;
  text-decoration: none;
  
}

a:hover.list-group-item{
  background-color: $brand-success !important;
  
}

p.list-group-item-text {
  
  color: #fff !important;
  margin: .7em 0 .7em 0;
}

/* Columns */

.three_column {
-moz-column-count: 3;
-webkit-column-count: 3;
column-count: 3;
}

/* Footer */

.footer {
  margin: 4em 0 9em 0;
  text-align:center;
}

.footernav {
  margin: 1em 0 3em 0;
  padding: 0;
  list-style: none;

  li {
    display: inline;
    padding: 1em;
}

}

.footer_logo img {
  max-width:100%
  width: 300px;
  margin-top: 2em;
}

.footer_info {
  margin-bottom: 5em;
}


.toc ul {
  padding: 0 0 0 1em;
  margin: 0;
}

.buy_books {
  background: url("../images/river_part.png") right -30px no-repeat scroll #EFEDE8;
  padding: 20px 30px;
border:  solid 3px #fff;
margin-bottom: 1em;
}

.buy_books:hover {
  border-color: #305074;
}

.buy_books_link {
  text-decoration: none !important;
  color: #305074;
}

.lead {
  font-size: 1.2em;
}





/* Temporary until we finalize colors */

.color-gray-darker {
  background-color: $gray-darker;
}

.color-gray-dark {
  background-color: $gray-dark;
}

.color-gray {
  background-color: $gray;
}

.color-gray-light {
  background-color: $gray-light;
}

.color-gray-lighter {
  background-color: $gray-lighter;
}

.color-brand-primary {
  background-color: $brand-primary;
}

.color-brand-success {
  background-color: $brand-success;
}

.color-brand-info {
  background-color: $brand-info;
}

.color-brand-warming {
  background-color: $brand-warning;
}

.color-brand-danger {
  background-color: $brand-danger;
}


@media (max-width: 768px) {
  .site_title h1 a {
    font-size: .7em !important;
    line-height: 0;
  }
  .header .home_search .pull-right {
    
    width: 100%;
  }
}

.metadata {
  border: solid 2px #aaa;
  padding: 20px;
  margin: 20px 0;
}




.tei_list_head {
  margin-top: 1.2em;
  font-size: 1.2em;
  font-weight: 600;
}

.contents ul,
.mapList ul,
.illusList ul,
.chapter ul {
  margin: .5em 0 1em 0;
  padding: 0;
}

.contents ul li,
.mapList ul li,
.illusList ul li,
.chapter li {
  list-style: none;
}

.tei_figure {
  
  margin: 1em 0;
  /* padding: 1em; */
  font-size: .9em;
}

/*
@media (min-width: 768px) {
  .tei_figure {
    max-width: 50%;
  }
}

.tei_figure img {
  max-width: 300px;
  max-height: 300px;
}
*/

.tei_figure p {
  margin: .2em 0;
  line-height: 1.2em;
    text-indent:0;
  margin-bottom: .5em;
}

h3.figure_head {
  font-size: 1.2em;
  font-weight: 100;
}

h2.title_main {
  font-size: 1.4em;
}

h2.title_main .title_sub {
  
  font-size: 1.4em;
  display: block;
}

.title_author {
  font-size: 1.4em;
  display: block;
  margin-bottom: .3em;
}

.book_bibl {
  font-size: .9em;
}

.sources .tei_bibl,
.bibliography .tei_bibl,
.bib .tei_bibl {
  padding-left: 1.5em ;
    text-indent: -1.5em ;
  margin-bottom: .7em;
}

.ref_link {
  text-decoration:none;
  }




.book_pagination {
  margin: 1em 0;
  
}

.book_pagination .previous_link:after,
.book_pagination .toc_link:after,
.book_pagination .entire_text_link:after {
  content: " | ";
}



.tei_title {
  font-style: italic;
}

.footnote {
  
  margin-bottom: 1em;
}

.right {
  display:block;
  text-align:right;
}

.tei_bibl .note {
  display: inline;
}

.tei_div {
  margin-bottom:1em;
}

.notes .entry p, .notes .tei_div p {
  text-indent: 0;
}

.bold {
  font-weight:800;
}

table.dictionary td {
    padding-left: 1.5em !important;
    text-indent: -1.5em ;
}

.bibliography p, .links p {
  text-indent:0;
}






.image_gallery_image {
  
  width: 300px;
  height: 200px;
  float: left;
  padding: 15px;
  margin: 10px 10px 0 0;
  font-size: .9em;
  line-height: 1.1em;
  background-color: #EEEEEE;
  text-align: center;
}

.image_gallery_image img {
  display: block;
  margin: 0px auto 10px auto;
}

.gallery_note {
  display: block;
  clear: both;
  font-size: 1.1em;
}

hr {
  display: block;
  clear: both;
  margin-top: 20px;
}



.tei_figure .label {
  display: none;
}

.tei_figure .caption {
  font-size: 1.2em;
  margin: .8em 0 .5em 0;
  display: block;
}

.tei_figure .resp {
  font-weight: 800;
  margin-top: .5em;
  display: block;
}

.tei_figure .tei_name {
  
}

.tei_figure .orgName {
  display: block;
  margin-top: .5em;
  border-top: solid #dfdfdf 1px;
  padding-top: .5em;

}

.tei_figure .note
 {
  display: block;
  margin-top: .5em;
} 




/* Progress Bar */


div.progress {
  border: solid 1px #aaa;
  height: .5em;
  background-color: #ced8db;
}

.first_date, .last_date {
  font-size: .7em;
  margin-top: -2em;
}

.first_date {
  float: left;
}

.last_date {
  float: right;
}
.progress_description {
  text-align: center;
  display: block;
  font-size: .9em;
}

.btn {
  text-decoration: none;
}

.prev_next_buttons .btn {
  margin-top: .5em;

}

/* Search results */

.searchResults {
  border-bottom: solid 1px #aaa;
  padding: 10px 0;
}

.search_results_info {
  
  border-right: 1px dotted #333;
  text-align: right;
}

.search_results_info ul,
.search_results_title ul {
  margin: 0;
  padding: 0;
}

.search_results_info ul li,
.search_results_title ul li {
  margin: 0;
  padding: 0;
  list-style-type: none;
  line-height: 1.2em;
}

.searchResults .title {
  font-size: 1.4em;
  line-height: 1.2;
  margin-bottom: .5em;
}

.highlighting li:before,
.highlighting li:after
 {
  content: "…";
}

.highlighting em {
  display: inline-block;
  font-weight: 700;

}



/* Journal Stylings */

@media (min-width: 768px) {
  .entry_date {
	 text-align:left;
	 
	 float: right; 
	 margin-top:.8em;
	 
  }
  
  .entry_author {float: left;
  width: 55%;
  }


  
 }
 

  
  

.clear_return {clear: both; height:1em !important;}

.center {margin: auto;}


ul.simple {
	margin: 1em 0;
	padding: 0;
	list-style-type: none;
}

.center {
	display: table;
	margin: auto;
	text-align: center
}

div.p {
	
	margin-bottom: 1em;
}



.entry .tei_figure .orgName {
  border-top: none;
}

.entry .tei_bibl span,
.entry .tei_bibl div {
	display: inline;
}



.tei_figure {

	display: block;
	padding:.5em 0
}





table {
	line-height: 1em;
}

table tr td {
	padding: 0;
	margin: 0;
}

.cell_bracket {
	font-weight: 100;
}

.rowspan_2.cell_bracket .cell_contents {
	font-size: 2.7em}

.rowspan_3.cell_bracket .cell_contents {
	font-size: 4em}

.rowspan_4.cell_bracket .cell_contents {
	font-size: 5em;	
}

.rowspan_5.cell_bracket .cell_contents {
	font-size: 6em;	
}

.rowspan_6.cell_bracket .cell_contents {
	font-size: 7em;	
}

.rowspan_7.cell_bracket .cell_contents {
	font-size: 8em;	
}

.rowspan_8.cell_bracket .cell_contents {
	font-size: 9em;	
}

.rowspan_9.cell_bracket .cell_contents {
	font-size: 10em;	
}

.rowspan_10.cell_bracket .cell_contents {
	font-size: 11em;	
}

.rowspan_11.cell_bracket .cell_contents {
	font-size: 12em;	
}

.rowspan_12.cell_bracket .cell_contents {
	font-size: 13em;	
}

.rowspan_13.cell_bracket .cell_contents {
	font-size: 14em;	
}



td.table_valign_middle {
  vertical-align:middle !important;
}

td {
  line-height: 1.05em !important;
  padding-right: .5em !important;
}

.tei_tr {
  /* Can't get this to work with padding or margin, come back to later. look at 
  http://rosie.unl.edu/lewisandclark/item/lc.jrn.1804-01-21-1 as an example */
  border-bottom: .7em solid transparent;
}

.table .table {
  background-color: transparent;
}

.table_halign_center {
  text-align: center;
}

table.table {
  margin-top: 2em !important;
}



.tei_figure p {
  
  text-indent: 0;
}

/* Text display */

.superscript {
  font-size: .9em;
  vertical-align: super;
}

.audio p {
  
  text-indent: 0;
}

/* Video Embed CSS */

/* This comes from UNL's CMS rules */

.wdn-responsive-embed{display:block;height:0;padding:0;position:relative;overflow:hidden}.wdn-responsive-embed.wdn-aspect16x9{padding-bottom:56.25%}

.wdn-responsive-embed .wdn-responsive-item,.wdn-responsive-embed embed,.wdn-responsive-embed iframe,.wdn-responsive-embed object,.wdn-responsive-embed video{border:0;position:absolute;top:0;left:0;width:100%;height:100%}



/* Index styling */

.index_list .name {
  padding-bottom: 0.75em;

  span {
    border-bottom: 1px dotted #333;
    display: block;

    a {
      background-color: #F4F4F4;
      padding: 0 .375em .25em 0;
      text-decoration: none;
    }
  }
}

/* More TEI styling, to address cleanup issue */

.footnote p {
  margin: 1em 0 0 0;
}

.milestone {
  width: 100%;
  border-top: 2px solid #aaa;
  height: 1px;
  margin-bottom: 1em;
}

.editor_end {
  width: 14em;
  margin-left: auto;
  margin-right: auto;
}

.footnote .tei_list_head {
  font-size: 1em;
  font-weight: 100;
}

